--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@
 html, body {
    height: 100%;
    font-family:verdana,arial,sans-serif;
-   color: #555555;
+   color:#555555;
 }
 
 .nav {
@@ -10,29 +10,69 @@ html, body {
    font-size:13px;
 }
 
+a {
+  color:#222222;
+}
+
+a:hover {
+  text-decoration:none;
+}
+
+hr {
+  border-color:#dedede;
+}
+
 #sidebar {
     padding:0px;
-	padding-top:15px;
+	height:100%;
 }
 
 #sidebar, #sidebar a, #sidebar-footer a {
     color:#ffffff;
     background-color: #555555;
 	text-shadow:0 0 2px #000000;
-    padding-left:5px;
+    padding-left:10px;
 }
-
 #sidebar .nav li>a:hover {
     background-color:#393939;
 }
 
-#sidebar-footer {
-  background-color:#444;
-  position:absolute;
-  bottom:5px;
-  padding:5px;
+
+#sidebar .nav> .sidebar-brand {
+    height: 60px;
+    font-size: 30px;
+    line-height: 60px;
 }
 
+#sidebar .nav> .sidebar-brand a {
+    color: #999999;
+}
+
+#sidebar .nav> .sidebar-brand a:hover {
+    text-decoration: none;
+    background-color:#555555;
+    color: #ffffff;
+}
+
+/* adjust the contents on smaller devices */
+@media (max-width: 768px) {
+
+  .column .padding {
+    padding: 7px;
+  }
+
+  .full{
+	padding-top:20px;
+  }
+
+  .navbar-blue {
+	background-color:#3B5999;
+    top:0;
+    width:100%;
+    position:relative;
+  }
+
+}
 
 /*
  * off canvas sidebar
@@ -41,13 +81,14 @@ html, body {
 @media screen and (max-width: 768px) {
   .row-offcanvas {
     position: relative;
-    -webkit-transition: all 0.25s ease-out;
-    -moz-transition: all 0.25s ease-out;
-    transition: all 0.25s ease-out;
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
   }
 
   .row-offcanvas-left.active {
     left: 33%;
+    height: 100%;
   }
 
   .row-offcanvas-left.active .sidebar-offcanvas {
@@ -55,9 +96,10 @@ html, body {
     position: absolute;
     top: 0;
     width: 33%;
-    margin-left: 5px;
+    height: 100%;
   }
 
   #sidebar, #sidebar a, #sidebar-footer a {
     padding-left:3px;
   }
+}
