--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -54,6 +54,12 @@ hr {
     color: #ffffff;
 }
 
+#sidebar-footer {
+	position: absolute;
+	bottom: 10px;
+	padding: 5px;
+}
+
 /* adjust the contents on smaller devices */
 @media (max-width: 768px) {
 
@@ -81,9 +87,10 @@ hr {
 @media screen and (max-width: 768px) {
   .row-offcanvas {
     position: relative;
-    -webkit-transition: all 0.5s ease-out;
-    -moz-transition: all 0.5s ease-out;
-    transition: all 0.5s ease-out;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
   }
 
   .row-offcanvas-left.active {
@@ -101,5 +108,26 @@ hr {
 
   #sidebar, #sidebar a, #sidebar-footer a {
     padding-left:3px;
+    position: relative;
+    -webkit-transition: all 0.25s ease;
+    -moz-transition: all 0.25s ease;
+    -o-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+  }
+  
+  #sidebar .nav> .sidebar-brand {
+    height: 30px;
+    font-size: 110%;
+    line-height: 120%;
+  }
+	
+  #sidebar .nav> .sidebar-brand a {
+	    color: #999999;
+  }
+	
+  #sidebar .nav> .sidebar-brand a:hover {
+	    text-decoration: none;
+	    background-color:#555555;
+	    color: #ffffff;
   }
 }
