--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -170,6 +170,66 @@ hr.about-hr:after {
     color: #090C11;
     background-color: #fff;
 }
+/* End HR - About */
+
+/* HR - Skills */
+hr.skills-hr {
+    margin: 25px auto 30px;
+    padding: 0;
+    max-width: 250px;
+    border: 0;
+    border-top: solid 5px;
+    text-align: center;
+}
+
+hr.skills-hr:after {
+    content: "\f085";
+    display: inline-block;
+    position: relative;
+    top: -.8em;
+    padding: 0 .25em;
+    font-family: FontAwesome;
+    font-size: 2em;
+}
+
+hr.skills-hr {
+    border-color: #fff;
+}
+
+hr.skills-hr:after {
+    color: #fff;
+    background-color: #627AAC;
+}
+/* End HR - Skills */
+
+/* HR - Projects */
+hr.projects-hr {
+    margin: 25px auto 30px;
+    padding: 0;
+    max-width: 250px;
+    border: 0;
+    border-top: solid 5px;
+    text-align: center;
+}
+
+hr.projects-hr:after {
+    content: "\f07c";
+    display: inline-block;
+    position: relative;
+    top: -.8em;
+    padding: 0 .25em;
+    font-family: FontAwesome;
+    font-size: 2em;
+}
+
+hr.projects-hr {
+    border-color: #090C11;
+}
+
+hr.projects-hr:after {
+    color: #090C11;
+    background-color: #fff;
+}
 /* End HR - Projects */
 
 /* Section Settings */
@@ -184,7 +244,7 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #18bc9c;
+    background: #627AAC;
 }
 
 section.success a,
@@ -193,7 +253,7 @@ section.success a:focus,
 section.success a:active,
 section.success a.active {
     outline: 0;
-    color: #2c3e50;
+    color: #627AAC;
 }
 
 @media(max-width:767px) {
@@ -206,3 +266,189 @@ section.success a.active {
     }
 }
 /* End Section Settings */
+
+/* Skill Settings */
+.skill-name {
+    color: #fff;
+    font-size: 130%;
+}
+#projects .skills-item {
+    right: 0;
+    margin: 0 0 15px;
+}
+
+#skills .skills-item .skills-link {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    max-width: 280px;
+    width: 280px;
+    height: 200px;
+    background-color: #0F1A23;
+    text-align: center;
+    padding: 40px;
+}
+
+
+#skills .skills-item .skills-link a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+}
+
+#skills * {
+    z-index: 2;
+}
+
+@media(min-width:767px) {
+    #skills .skills-item {
+        margin: 0 0 30px;
+    }
+}
+/* End Skill Settings */
+
+/* Projects Settings */
+.fa-search-plus {
+    color: #313d56;
+}
+#projects .projects-item {
+    right: 0;
+    margin: 0 0 15px;
+}
+
+#projects .projects-item .projects-link {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    max-width: 400px;
+}
+
+#projects .projects-item .projects-link .caption {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background: rgba(255,255,255,.8);
+    -webkit-transition: all ease .75s;
+    -moz-transition: all ease .75s;
+    transition: all ease .75s;
+}
+
+#projects .projects-item .projects-link .caption:hover {
+    opacity: 1;
+}
+
+#projects .projects-item .projects-link .caption .caption-content {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 20px;
+    margin-top: -12px;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+}
+
+#projects .projects-item .projects-link .caption .caption-content i {
+    margin-top: -12px;
+}
+
+#projects .projects-item .projects-link .caption .caption-content h3,
+#projects .projects-item .projects-link .caption .caption-content h4 {
+    margin: 0;
+}
+
+#projects * {
+    z-index: 2;
+}
+
+@media(min-width:767px) {
+    #projects .projects-item {
+        margin: 0 0 30px;
+    }
+}
+/* End Projects Settings */
+
+/* Project Modal Settings */
+.projects-modal .modal-content {
+    padding: 100px 0;
+    min-height: 100%;
+    border: 0;
+    border-radius: 0;
+    text-align: center;
+    background-clip: border-box;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.projects-modal .modal-content h2 {
+    margin: 0;
+    font-size: 3em;
+}
+
+.projects-modal .modal-content img {
+    margin-bottom: 30px;
+}
+
+.projects-modal .modal-content .item-details {
+    margin: 30px 0;
+}
+
+.projects-modal .close-modal {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    width: 75px;
+    height: 75px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.projects-modal .close-modal:hover {
+    opacity: .3;
+}
+
+.projects-modal .close-modal .lr {
+    z-index: 1051;
+    width: 1px;
+    height: 75px;
+    margin-left: 35px;
+    background-color: #2c3e50;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.projects-modal .close-modal .lr .rl {
+    z-index: 1052;
+    width: 1px;
+    height: 75px;
+    background-color: #2c3e50;
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.projects-modal .modal-backdrop {
+    display: none;
+    opacity: 0;
+}
+/* End Project Modal Settings */
+
+/* Download Button Settings */
+.btn-outline {
+    margin-top: 15px;
+    border: solid 2px #fff;
+    font-size: 20px;
+    color: #fff;
+    background: 0 0;
+    transition: all .3s ease-in-out;
+}
+
+.btn-outline:hover,
+.btn-outline:focus,
+.btn-outline:active,
+.btn-outline.active {
+    border: solid 2px #fff;
+    color: #18bc9c;
+    background: #fff;
+}
+/* End Download Button Settings */
