--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -270,38 +270,80 @@ section.success a.active {
 /* Skill Settings */
 .skill-name {
     color: #fff;
+    display: none;
 }
-#projects .skills-item {
+
+
+.skills-link:hover .skill-name {
+    display: table;
+    margin: 0 auto;
+}
+
+.skills-link:hover .two-lines {
+    margin-top: -5px;
+}
+
+.skills-link:hover .icon-one-line {
+    padding-top: 5px;
+}
+
+.skills-link:hover .skill-icon{
+    display: none;
+}
+
+#skills .skills-item {
     right: 0;
-    margin: 0 0 15px;
+    margin-top: 15px;
 }
+
 
 #skills .skills-item .skills-link {
     display: block;
     position: relative;
     margin: 0 auto;
-    max-width: 200px;
-    width: 180px;
-    height: 140px;
+    width: 80px;
+    height: 80px;
     background-color: #0F1A23;
     text-align: center;
-    padding: 40px;
+    padding-top: 25px;
 }
 
+#skills .skills-link:hover {
+    background-color: #000;
+    -webkit-transition: all ease 1.25s;
+    -moz-transition: all ease 1.25s;
+    transition: all ease 1.25s;
+}
 
-#skills .skills-item .skills-link a:hover, a:visited, a:link, a:active {
-    text-decoration: none;
+#skills .skill-love:hover {
+    background-color: #FF0000;
+    -webkit-transition: all ease 1.25s;
+    -moz-transition: all ease 1.25s;
+    transition: all ease 1.25s;
 }
 
 #skills * {
     z-index: 2;
 }
 
-@media(min-width:767px) {
+@media(max-width:1000px) {
     #skills .skills-item {
-        margin: 0 0 30px;
+        margin-right: 30px;
     }
 }
+
+@media(min-width: 1001px) and (max-width: 1200px){
+    #skills .skills-item {
+        margin-right: 30px;
+    }
+}
+
+@media(max-width: 767px) {
+    #skills .skills-item {
+        margin-right: 55px;
+    }
+}
+
 /* End Skill Settings */
 
 /* Projects Settings */
@@ -363,6 +405,23 @@ section.success a.active {
     #projects .projects-item {
         margin: 0 0 30px;
     }
+}
+
+#projects .project-tags {
+    text-align: right;
+}
+#projects .project-tag-item {
+    color: black;
+    position: relative;
+    background: rgba(0, 0, 0, 0.2);
+    -moz-border-radius: 1em;     /* for mozilla-based browsers */
+    -webkit-border-radius: 1em;  /* for webkit-based browsers */
+    border-radius: 1em;          /* theoretically for *all* browsers
+                                    dependant on implementation of CSS3 */
+}
+
+#projects .project-tag-item a:hover, a:visited, a:active, a:link {
+    text-decoration: none;
 }
 /* End Projects Settings */
 
