--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -246,8 +246,8 @@ hr.projects-hr:after {
 }
 /* End HR - Projects */
 
-/* HR - Contact */
-hr.contact-hr {
+/* HR - Resume */
+hr.resume-hr {
     margin: 25px auto 30px;
     padding: 0;
     max-width: 250px;
@@ -256,8 +256,8 @@ hr.contact-hr {
     text-align: center;
 }
 
-hr.contact-hr:after {
-    content: "\f003";
+hr.resume-hr:after {
+    content: "\f0c6";
     display: inline-block;
     position: relative;
     top: -.8em;
@@ -266,11 +266,11 @@ hr.contact-hr:after {
     font-size: 2em;
 }
 
-hr.contact-hr {
+hr.resume-hr {
     border-color: #fff;
 }
 
-hr.contact-hr:after {
+hr.resume-hr:after {
     color: #fff;
     background-color: #627AAC;
 }
@@ -545,10 +545,12 @@ section.success a.active {
 /* Contact & Download Button Settings */
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px #000;
-    font-size: 20px;
-    color: #000;
-    background: #fff;
+    border: solid 2px #fff;
+    font-size: 30px;
+    color: #fff !important;
+    background: #627AAC;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
 }
 
@@ -557,7 +559,67 @@ section.success a.active {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #000;
-    color: #fff;
-    background: #000;
+    color: #000 !important;
+    background: #627AAC;
 }
 /* End Download Button Settings */
+
+
+/* Footer */
+footer {
+    color: #fff;
+}
+
+footer h3 {
+    margin-bottom: 30px;
+}
+
+footer .footer-above {
+    padding-top: 50px;
+    background-color: #2c3e50;
+}
+
+footer .footer-col {
+    margin-bottom: 50px;
+}
+
+footer .footer-below {
+    padding: 25px 0;
+    background-color: #233140;
+}
+
+.email-link {
+    font-size:200%; 
+    color:#fff;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+}
+
+.email-link:hover {
+    color:#000;
+}
+
+.btn-social {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #fff;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 30px;
+    line-height: 45px;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+}
+
+.btn-social:hover {
+    border: 2px solid #000;
+}
+
+.btn-social:hover i{
+    color: #000;
+}
+
+/* End Footer */
