--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -332,15 +332,22 @@ section.success a.active {
     padding-top: 5px;
 }
 
-.skills-link:hover .skill-icon{
+.skills-link:hover .skill-icon {
     display: none;
+}
+
+#skills {
+    text-align: center;
 }
 
 #skills .skills-item {
     right: 0;
-    margin-top: 15px;
+    margin-top: 0px;
+    display: inline-block;
+    width: 95px;
+    height:95px;
+    overflow: hidden;
 }
-
 
 #skills .skills-item .skills-link {
     display: block;
@@ -351,6 +358,7 @@ section.success a.active {
     background-color: #0F1A23;
     text-align: center;
     padding-top: 25px;
+    box-sizing: border-box;
 }
 
 #skills .skills-link:hover {
@@ -371,40 +379,9 @@ section.success a.active {
     z-index: 2;
 }
 
-@media(max-width:1000px) {
-    #skills .skills-item {
-        margin-right: 30px;
-    }
+.col-sm-1 {
+    padding: 0;
 }
-
-@media(min-width: 1001px) and (max-width: 1200px){
-    #skills .skills-item {
-        margin-right: 30px;
-        margin-left: 5px;
-    }
-}
-
-@media(max-width: 767px) {
-    #skills .skills-item {
-        margin-right: 55px;
-        margin-left: 15px;
-    }
-}
-
-@media(max-width: 466px) {
-    #skills .skills-item {
-        margin-right: 40px;
-        margin-left: 40px;
-    }
-}
-
-@media(max-width: 376px) {
-    #skills .skills-item {
-        margin-right: 40px;
-        margin-left: 30px;
-    }
-}
-
 /* End Skill Settings */
 
 /* Projects Settings */
