--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -618,3 +618,32 @@ footer .footer-below {
 }
 
 /* End Footer */
+
+/* Project Carousel */
+.carousel-inner {
+	max-height: 480px;
+}
+
+.projects-modal .modal-content img,
+.projects-modal .modal-content iframe {
+	margin-left: auto;
+	margin-right: auto;
+	max-height:100%;
+}
+
+.responsive-video {
+position: relative;
+padding-bottom: 56.25%;
+padding-top: 60px; overflow: hidden;
+}
+
+
+.responsive-video iframe,
+.responsive-video object,
+.responsive-video embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
