--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -470,7 +470,7 @@ section.success a.active {
 
 /* Project Modal Settings */
 .projects-modal .modal-content {
-    padding: 100px 0;
+    padding: 30px 0;
     min-height: 100%;
     border: 0;
     border-radius: 0;
@@ -497,8 +497,8 @@ section.success a.active {
     position: absolute;
     top: 25px;
     right: 25px;
-    width: 75px;
-    height: 75px;
+    width: 35px;
+    height: 35px;
     background-color: transparent;
     cursor: pointer;
 }
@@ -510,7 +510,7 @@ section.success a.active {
 .projects-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
-    height: 75px;
+    height: 35px;
     margin-left: 35px;
     background-color: #2c3e50;
     -webkit-transform: rotate(45deg);
@@ -521,7 +521,7 @@ section.success a.active {
 .projects-modal .close-modal .lr .rl {
     z-index: 1052;
     width: 1px;
-    height: 75px;
+    height: 35px;
     background-color: #2c3e50;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
@@ -531,6 +531,10 @@ section.success a.active {
 .projects-modal .modal-backdrop {
     display: none;
     opacity: 0;
+}
+
+.tech-used {
+    font-size: 100%;
 }
 /* End Project Modal Settings */
 
@@ -637,7 +641,6 @@ padding-bottom: 56.25%;
 padding-top: 60px; overflow: hidden;
 }
 
-
 .responsive-video iframe,
 .responsive-video object,
 .responsive-video embed {
@@ -646,4 +649,23 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
+}
+
+.carousel-control .glyphicon-chevron-left, .carousel-control .icon-prev {
+    color: #000;
+    left: -15px;
+}
+
+.carousel-control .glyphicon-chevron-right, .carousel-control .icon-next {
+    color: #000;
+    right: -15px;
+}
+
+.carousel-control {
+    color: #000;
+    text-shadow: none;
+}
+
+.carousel-control.left, .carousel-control.right {
+    background: none;
 }
