--- a/css/bongsik-theme.css
+++ b/css/bongsik-theme.css
@@ -5,10 +5,21 @@
 
 body {
 	font-family: "bmhanna", gulim;
-	padding-left: 20px;
-	padding-right: 20px;
 	background-color: #12181f;
 	color:white;
+	width: 100%;
+	height: 100%;
+}
+
+.spinner {
+ 	position:fixed;
+  	width:100%;
+  	height:100%;
+  	top:0;
+  	left:0;
+  	opacity:0.6;
+  	margin-left: 20px;
+	margin-right: 20px;
 }
 
 .table {
