Make it a little fancier

--- a/css/wedding_stylesheet.css
+++ b/css/wedding_stylesheet.css
@@ -11,3 +11,18 @@ section:before {
     content: "";
     display:block;
 }
+
+p.subtitle {
+  font-family: 'Allura', cursive;
+  font-size: 4em;
+}
+
+.mirrored-vertical {
+  -webkit-transform: scaleY(-1);
+  -moz-transform: scaleY(-1);
+  -o-transform: scaleY(-1);
+  transform: scaleY(-1);
+
+  filter: FlipY;
+  -ms-filter: "FlipY";
+}
